# dtech_airflow

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.scheduler  Dockerfile.web  Makefile  README.md  docker-compose.yml  envar_shim.sh  heroku.yml  requirements.txt  start.sh
.circleci/: config.yml
airflow/: airflow.cfg  airflow_run.py  meltano_run.py  pyproject.toml
airflow/config/: log_config.py
airflow/dags/: canvas.py
airflow/dags/scripts/: grades.py
airflow/dags/sql/: canvas_cleanup.sql
canvas/: .gitignore  meltano.yml
canvas/orchestrate/: airflow.cfg
meltano/: .gitignore  docker-compose.prod.yml  docker-compose.yml  logging_config.yaml  meltano.yml  meltano_run.py  pyproject.toml
meltano/orchestrate/dags/: canvas.py
