[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Matt <mwcooley99@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.12"
apache-airflow = {version = "2.2.3", extras = ['postgres']}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
