[tool.poetry]
name = "dtech-meltano"
version = "0.1.0"
description = ""
authors = ["Matt <mwcooley99@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.12"
meltano = "1.93.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
